--- a/.github/workflows/MobileBuild.yml
+++ b/.github/workflows/MobileBuild.yml
@@ -18,7 +18,7 @@ jobs:
         include:
           - name: Android
             os: macos-14
-            buildArgs: "android -ONLY_ARMV8"
+            buildArgs: "android -ONLY_ARMV8 -release"
             artifactName: androidBuild
             artifactPath: "export/release/android/bin/app/build/outputs/apk/release/*.apk"
     uses: ./.github/workflows/build.yml
